testdata/compiler/invalid/undefined-variable-in-template.pt
req withTemplate:
	GET /groups/{{group_id}}/orders

flow "x":
	withTemplate
